Rework tools service, that he can edit data for calendar.